slot not showing when the screen is bugger than 600px

--- a/assets/style/elements/font-awesome.scss
+++ b/assets/style/elements/font-awesome.scss
@@ -1,4 +1,8 @@
-.font-awesome-icon {
-    background-color: black;
+.open-menu-filtet-icon {
     font-size: 22px;
+    color: white;
+}
+
+.closed-menu-icon {
+    margin-bottom: 20px;
 }
